--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,1 +1,12 @@
 <h1>This is home Page</h1>
+
+{% for project in projects %}
+<h2>{{ project.title }}</h2>
+<h3>{{ project.description }}</h3>
+<img src= '{{ project.image.url }}'>
+{% if project.url %}
+<br><a href='{{project.url}}'>LINK</a>
+{% endif %}
+{% endfor %}
+
+<br>
